package pusUtils.protobuf;
message PusSubscribe {
    required string pusId = 1;
    required string apId = 2;
}
