package pusUtils.protobuf;
message PusUnsubscribe {
    required string pusId = 1;
    required string apId = 2;
}
